--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=TAWmovies
 
 # --- Configuración de MySQL ---
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_db?serverTimezone=UTC
-spring.datasource.username=taw_proyecto
-spring.datasource.password=taw_proyecto
+spring.datasource.username=rootº
+spring.datasource.password=12345M
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- Configuración de JPA ---
