--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=TAWmovies
 
 # --- Configuración de MySQL ---
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_db?serverTimezone=UTC
-spring.datasource.username=rootº
+spring.datasource.username=root
 spring.datasource.password=12345M
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
